--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/usuarios">Usuarios</a>
         <a class="nav-link" href="#">Clientes</a>
         <a class="nav-link" href="#">Proveedores</a>
-        <a class="nav-link" href="#">Productos</a>
+        <a class="nav-link" href="/productos">Productos</a>
         <a class="nav-link" href="#">Ventas</a>
         <a class="nav-link" href="#">Reportes</a>
       </div>
