--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -1,68 +1,102 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 <head>
-<meta charset="utf-8">
-	<style>
-	h1 {
-		text-align: left;
-	}
-	
-	p {
-		text-align: center;
-	}
-	
-	div {
-		text-align: left;
-	}
-	</style>
-<title>Tienda Genérica - MinTic</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-  	
+<meta charset="UTF-8">
+<title>Tienda Genérica</title>
+<link rel="stylesheet" href="${pageContext.request.contextPath}/assets/css/css.css" />
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
+
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Tienda Genérica</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/usuarios">Usuarios</a>
-        <a class="nav-link" href="#">Clientes</a>
-        <a class="nav-link" href="#">Proveedores</a>
-        <a class="nav-link" href="#">Productos</a>
-        <a class="nav-link" href="#">Ventas</a>
-        <a class="nav-link" href="#">Reportes</a>
-      </div>
-    </div>
-  </div>
-</nav>
-	<h1>Gestion de Usuarios</h1>
-	<div>
-		<form action="/guardarusuario">
-		  <label for="fname">Cédula:</label><br>
-		  <input type="text" id="fname" name="fname" value=""><br>
-		  
-		  <label for="lname">Usuario:</label><br>
-		  <input type="text" id="lname" name="lname" value=""><br>
-		  
-		  <label for="lname">Nombre Completo:</label><br>
-		  <input type="text" id="lname" name="lname" value=""><br>
-		  
-		  <label for="fname">Contraseña:</label><br>
-		  <input type="password" id="fname" name="fname" value=""><br>
-		  
-		  <label for="lname">Correo Electrónico:</label><br>
-		  <input type="text" id="lname" name="lname" value=""><br>
-		  
-		  
-		  
-		  <br>
-		  <br>
-		  <input type="submit" value="Agregar">
-		</form>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="/menu">Tienda</a>
 
-	</div>
+		<div class="collapse navbar-collapse" id="navbarText">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active"><a class="nav-link" href="#">Usuarios
+
+				</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Clientes</a>
+				</li>
+				<li class="nav-item"><a class="nav-link" href="#">Proveedores</a></li>
+
+				<li class="nav-item"><a class="nav-link" href="#">Ventas</a></li>
+
+				<li class="nav-item"><a class="nav-link" href="#">Reportes</a></li>
+			</ul>
+
+		</div>
+	</nav>
+
+		<div class=" col-xl-2 col-lg-3 col-md-4 col-sm-6" id="formulario">
+			<form method="post" action="/usuario">
+
+
+
+				<div class="form-group">
+					<input type="hidden" name="id" value="${usuarioEditar.id}">
+
+					<label for="numero"> numero:</label><input type="text"
+						name="numeroDocumento" id="numero"
+						value="${usuarioEditar.numeroDocumento}" class="form-control" />
+				</div>
+				<div class="form-group">
+					<label>nombre:</label><input type="text" name="nombre"
+						class="form-control" value="${usuarioEditar.nombre}" />
+				</div>
+				<div class="form-group">
+					<label>Email:</label><input type="text" name="email"
+						class="form-control" value="${usuarioEditar.email}" />
+				</div>
+				<div class="form-group">
+					<label> nombre usuario:</label> <input type="text"
+						name="nombreUsuario" class="form-control"
+						value="${usuarioEditar.nombreUsuario}" />
+				</div>
+				<div class="form-group">
+					<label>password:</label> <input type="password" name="password"
+						class="form-control" value="${usuarioEditar.password}" />
+				</div>
+
+				<br>
+				<button type="submit" class="btn btn-primary">Guardar</button>
+			</form>
+		</div>
+
+	<br> <br>
+
+		<table class="table">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Tipo documento</th>
+					<th>Numero</th>
+					<th>Nombre</th>
+					<th>Nombre usuario</th>
+					<th colspan="2">Operaciones</th>
+
+				</tr>
+			</thead>
+			<tbody>
+				<c:forEach items="${usuarios}" var="usuario">
+					<tr>
+						<td>${usuario.id}</td>
+						<td>${usuario.idTipoDocumento.tipo}</td>
+						<td>${usuario.numeroDocumento}</td>
+						<td>${usuario.nombre}</td>
+						<td>${usuario.nombreUsuario}</td>
+						<td><a class="btn btn-danger"
+							href="/eliminarusuario/${usuario.id}">Eliminar</a></td>
+						<td><a class="btn btn-success" href="/usuario/${usuario.id}">Actualizar</a></td>
+					</tr>
+				</c:forEach>
+			</tbody>
+		</table>
+
 </body>
 </html>
